# lollmsBot-GrumpiFied

./: .dockerignore  .env.example  .gitignore  ADAPTIVE_THREAT_INTELLIGENCE.md  API_KEYS_READY.md  API_REFERENCE.md  AUTONOMOUS_HOBBY_GUIDE.md  AWESOME_SKILLS_GUIDE.md  AWESOME_SKILLS_INTEGRATION_SUMMARY.md  BRANCH_MERGE_STATUS.md  BUILD_COMPLETION_STATUS.md  COGNITIVE_TWIN_QUICK_REFERENCE.md  CONFIGURE_OLLAMA_API.md  CONTRIBUTING.md  COVE_QA_ANALYSIS.md  Dockerfile  Dockerfile.sandbox  FINAL_REVIEW_SUMMARY.md  FINAL_SECURITY_SUMMARY.md  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_DIAGRAM.txt  INTEGRATION_FINAL_SUMMARY.md  INTEGRATION_VALIDATION_SUMMARY.md  MERGE_READY.md  MULTIPROVIDER_IMPLEMENTATION.md  MULTI_PROVIDER_SETUP.md  MULTI_PROVIDER_SUMMARY.md  OLLAMA_API_SETUP.md  OPPORTUNITIES.md  PHASE1_COMPLETE.md  PHASE3_COMPLETION_REPORT.md  PHASE3_FINAL_SUMMARY.md  PHASE3_IMPLEMENTATION.md  PHASE3_PROGRESS_SUMMARY.md  PHASE_2C_COGNITIVE_TWIN_COMPLETE.md  PHASE_2C_FINAL_SUMMARY.md  (+51 more)
.github/: PULL_REQUEST_TEMPLATE.md
examples/: cognitive_twin_demo.py
lollmsbot/: __init__.py  adaptive_threat_intelligence.py  agent.py  api_key_protection.py  autonomous_hobby.py  awesome_skills_converter.py  awesome_skills_integration.py  awesome_skills_manager.py  cli.py  cognitive_core.py  cognitive_twin.py  config.py  constitutional_restraints.py  eigenmemory.py  gateway.py  guardian.py  heartbeat.py  hobby_archive.py  hobby_knowledge_graph.py  hobby_lora.py  hobby_metrics.py  hobby_rlhf.py  skills.py  (+13 more)
(+54 files in other folders)
