[project]
name = "lollmsbot"
version = "0.0.1"
description = "LoLLMS-based personal AI assistant (Clawdbot-style)"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
    "lollms-client>=1.11.4",   # LoLLMS client[web:41]
    "python-dotenv>=1.0.0",    # .env loading[web:46]
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",  # Async SQLite support
    "rich>=13.7.0",      # Beautiful terminal UI
    "questionary>=2.0.0", # Interactive prompts
    "discord.py[voice]>=2.3.2",     # Discord bot[web:discord.py]
    "slack-sdk>=3.30.0",     # Slack[web:slack-sdk]
    "openai", # for lollms
    "PyNaCl",
    "jinja2",
    "pyyaml",  # For soul.md parsing
    "slowapi>=0.1.9",  # Rate limiting for FastAPI (SECURITY FIX)
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=20.0",  # Modern async Telegram bot library
]
sandbox = [
    "docker>=7.0.0",  # Docker SDK for sandbox execution
]
ml = [
    "sentence-transformers>=2.0.0",  # Better embeddings for RAG
    "chromadb>=0.4.0",  # Production vector store
]
examples = [
    "psutil>=5.9.0",  # Required for cognitive_twin_demo.py example
]

all = [
    "python-telegram-bot>=20.0",
    "docker>=7.0.0",
    "sentence-transformers>=2.0.0",
    "chromadb>=0.4.0",
    "psutil>=5.9.0",
]

[project.scripts]
lollmsbot = "lollmsbot.cli:main"
